WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309149
Autoplay should not proceed before default text tracks finish loading
https://bugs.webkit.org/show_bug.cgi?id=309149
Summary
Autoplay should not proceed before default text tracks finish loading
Ahmad Saleem
Reported
2026-03-03 23:58:47 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-03 23:58:54 PST
<
rdar://problem/171699293
>
Ahmad Saleem
Comment 2
2026-03-04 00:01:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59875
EWS
Comment 3
2026-03-06 07:28:08 PST
Committed
308796@main
(82cb946ab2b3): <
https://commits.webkit.org/308796@main
> Reviewed commits have been landed. Closing PR #59875 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug